--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,12 @@
 .App {
-  text-align: center;
 }
 
-.App-logo {
+.AppLogo {
   animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 64px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
+.AppIntro {
   font-size: large;
 }
 
